--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -2,7 +2,7 @@ FROM python:3.8-slim
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y gcc
+RUN apt-get update && apt-get install && apt-get clean
 
 COPY requirements_api.txt .
 RUN pip install --no-cache-dir -r requirements_api.txt
